force-app/main/default/objects/KimbleOne__SupplierInvoiceAllocation__c/KimbleOne__SupplierInvoiceAllocation__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Supplier Invoice Allocation</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Invoice Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>