force-app/main/default/objects/KimbleOne__SupplierInvoiceAllocation__c/fields/KimbleOne__SupplierInvoice__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SupplierInvoice__c</fullName>
    <label>Supplier Invoice</label>
    <referenceTo>KimbleOne__SupplierInvoice__c</referenceTo>
    <relationshipLabel>Supplier Invoice Allocations</relationshipLabel>
    <relationshipName>SupplierInvoiceAllocations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>