force-app/main/default/objects/KimbleOne__SupplierInvoiceAllocation__c/fields/KimbleOne__SupplierInvoiceableItem__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SupplierInvoiceableItem__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Supplier Invoiceable Item</label>
    <referenceTo>KimbleOne__SupplierInvoiceableItem__c</referenceTo>
    <relationshipLabel>Supplier Invoice Allocations</relationshipLabel>
    <relationshipName>SupplierInvoiceAllocations</relationshipName>
    <type>Lookup</type>
</CustomField>